src/tests/snapshots/gitu__tests__binary_file.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Staged changes (1)                                                             |
▌added      binary-file                                                         |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: a4136f2f4fbe0a68
