src/tests/snapshots/gitu__tests__collapsed_sections_config.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main…                                                                |
                                                                                |
 Untracked files…                                                               |
                                                                                |
 Recent commits…                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: c1b5d9b336d37d55
