src/tests/snapshots/gitu__tests__crlf_diff.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   crlf.txt                                                            |
 @@ -1,2 +1,2 @@                                                                |
  unchanged                                                                     |
 -unchanged                                                                     |
 +changed                                                                       |
                                                                                |
 Recent commits                                                                 |
 13d662a main add crlf.txt                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: a4404453dbbfb78e
