src/tests/snapshots/gitu__tests__ext_diff.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Unstaged changes (1)                                                           |
 added      unstaged.txt                                                        |
 @@ -0,0 +1 @@                                                                  |
 +unstaged                                                                      |
                                                                                |
 Staged changes (1)                                                             |
 added      staged.txt                                                          |
 @@ -0,0 +1 @@                                                                  |
 +staged                                                                        |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 875d69d553a5f62a
