src/tests/snapshots/gitu__tests__go_down_past_collapsed.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 2 commit(s).                          |
                                                                                |
 Unstaged changes (2)                                                           |
 modified   file-one…                                                           |
▌modified   file-two…                                                           |
                                                                                |
 Recent commits                                                                 |
 e45938a main add file-two                                       Author Name __ |
 b3cf8e8 add file-one                                            Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 3fca55fb49934ad5
